kuberenetes-manifests/apibuilder-dev-663b3ad5dae1aa00efc0c94f-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apibuilder-dev-663b3ad5dae1aa00efc0c94f
  namespace: dev
spec:
  gateways:
  - apiwiz-system/apiwiz-gateway
  http:
  - headers:
      request:
        add:
          x-tenant: acme-team-gcp-stage-1715157708906--ApiBuilder
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apibuilder-agent
        port:
          number: 8000
